fixed cropperSize

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,5 @@
 // app global css in SCSS form
+.cropper {
+    height: 400px;
+    width: 400px;
+}
